--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My First Idle</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <p>Mine Me Deep</p>
