--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <p>Mine Me Deep</p>
-    <p id="goldMined">0 Gold Mined</p>
-    <button onclick="mineGold()">Dig Deeper</button>
-    <button onclick="buyGoldPerClick()" id ="perClickUpgrade">Upgrade Digger (Currently Level 1) Cost: 10 Gold</button>
+    <div class="flexbox-container">
+      <p>Mine Me Deep</p>
+      <p id="goldMined">0 Gold Mined</p>
+      <button onclick="mineGold()">Dig Deeper</button>
+      <button onclick="buyGoldPerClick()" id ="perClickUpgrade">Upgrade Digger (Currently Level 1) Cost: 10 Gold</button>
+    </div>
     <script src="main.js" charset="utf-8" type="text/javascript"></script>
   </body>
 </html>
