--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <p id="goldMined">0 Gold Mined</p>
       <button onclick="mineGold()">Dig Deeper</button>
       <button onclick="buyGoldPerClick()" id ="perClickUpgrade">Upgrade Digger (Currently Level 1) Cost: 10 Gold</button>
+      <button onclick="buyAutoDig()" id ="autoDigUpgrade">Upgrade Auto-Digger (Currently Level 1) Cost: 5 Gold</button>
     </div>
     <script src="main.js" charset="utf-8" type="text/javascript"></script>
   </body>
