save and load functions added
added functions to save and load a game state. as well as button to delete save data from the localStorage

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <button onclick="buyGoldPerClick()" id ="perClickUpgrade">Upgrade Digger (Currently Level 1) Cost: 10 Gold</button>
       <button onclick="buyAutoDig()" id ="autoDigUpgrade">Upgrade Auto-Digger (Currently Level 1) Cost: 5 Gold</button>
     </div>
+    <button onclick="saveGameState()" id="saveInLocalStorage">Save Game State (last saved at Digger Level: 1)</button>
+    <button onclick="loadGameData()" id="loadFromLocalStorage">Load Game Data</button>
+    <button onclick="clearSaveData()" id="clearLocalStorage">Clear Save Game from cache</button>
     <script src="main.js" charset="utf-8" type="text/javascript"></script>
   </body>
 </html>
